# Common-Utility-Scripts

./: Readme.md  pyproject.toml
src/cli_tool/: main.py
src/concatenate/: Concatenate_all_Markdown.py  Concatenate_all_mkv.py
src/convert/: pdf_converter.py  wav_to_flac.py
src/deleter/: emptyfolder_deleter.py
src/duplicate/: prefix_matcher.py
