[project]
name = "common-utility-scripts"
version = "0.1.2"
description = "File conversion and management utility scripts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "comtypes>=1.4.12",
    "docx2pdf>=0.1.8",
    "beautifulsoup4>=4.12.2",
    "PyMuPDF>=1.22.5",
    "typer>=0.21.0",
    "rich>=13.0.0",
    "ffmpeg-python>=0.2.0",
    "pywin32>=311",
]

[project.scripts]
file-utils = "cli_tool.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
